@@ -1,3 +1,7 @@
+2002-10-31  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/vfs/ftpfs.py (FTPFile.robuster): now catch more errors.
+
 2002-10-25  Jacob Smullyan  <jsmullyan@wnyc.org>
 
 	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:url:>}}): Added
